# openapi

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
data/v3.0/: FreeNAS_openapi.yaml  PRTG_openapi.yaml  animals.yaml  farm.yaml  loop.yaml  loop2.yaml  petstore-expanded.yaml
data/v3.0/extra/: loop2.yaml  (+1 more)
examples/: printer.rs
openapi/: all.html  enum.OpenApi.html  fn.from_path.html  fn.from_reader.html  fn.to_json.html  fn.to_yaml.html  index.html  sidebar-items.js  type.Result.html
openapi/error/: enum.Error.html  index.html  sidebar-items.js
openapi/v2/: enum.Flow.html  enum.ParameterOrRef.html  enum.Scheme.html  enum.Security.html  index.html  sidebar-items.js  struct.Contact.html  struct.ExternalDoc.html  struct.Info.html  struct.License.html  struct.Operation.html  struct.Parameter.html  struct.PathItem.html  struct.Response.html  struct.Schema.html  struct.Spec.html  struct.Tag.html  type.SecurityRequirement.html
openapi/v3_0/: enum.BooleanObjectOrReference.html  enum.Link.html  enum.MediaTypeExample.html  enum.ObjectOrReference.html  enum.SecurityScheme.html  enum.Value.html  index.html  sidebar-items.js  struct.AuthorizationCodeFlow.html  struct.Callback.html  struct.ClientCredentialsFlow.html  struct.Components.html  struct.Contact.html  struct.Encoding.html  struct.Example.html  struct.Extensions.html  struct.ExternalDoc.html  struct.Flows.html  struct.Header.html  struct.ImplicitFlow.html  struct.Info.html  struct.License.html  struct.MediaType.html  struct.Operation.html  struct.Parameter.html  struct.PasswordFlow.html  struct.PathItem.html  struct.RequestBody.html  struct.Response.html  struct.Schema.html  struct.Server.html  struct.ServerVariable.html  struct.Spec.html  struct.Tag.html
src/: error.rs  lib.rs  main.rs  schema.rs  types.rs  types.rs.in
src/openapi/: error.rs.html  lib.rs.html
src/v2/: mod.rs  schema.rs
src/v3_0/: components.rs  extension.rs  mod.rs  schema.rs
(+71 files in other folders)
