[package]
name = "openapi"
version = "0.1.5"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust bindings for openapi schemas"
documentation = "https://softprops.github.io/openapi"
homepage = "https://github.com/softprops/openapi"
repository = "https://github.com/softprops/openapi"
keywords = ["openapi", "swagger"]
license = "MIT"
edition = "2018"

[dependencies]
error-chain = "0.10"
failure = "0.1"
semver = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
url = { version = "2.0", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "0.6"
serde_test = "1.0.117"
